# util

./: CMakeLists.txt  LICENSE  cast.hpp  config.hpp  dynspan.hpp  fam.hpp  flags.hpp  logging.hpp  options.hpp  padding.hpp  sequence.hpp  threading.hpp
src/: config.cpp  flags.cpp  logging.cpp  options.cpp  threading.cpp
test/: CMakeLists.txt  flags_test.cpp  test.cpp
